# yggdrasil

./: CMakeLists.txt
docs/: .gitignore  Doxyfile  Makefile  conf.py  index.rst  make.bat
docs/api/: index.rst
source/: CMakeLists.txt
source/application/: CMakeLists.txt  main.cpp
source/core/: CMakeLists.txt  engine.cpp  engine.h  entity.cpp  entity.h  loader.cpp  loader.h  system.h  system_loader.cpp  system_loader.h
source/modules/: CMakeLists.txt
source/modules/assimploader/: CMakeLists.txt  assimploader.cpp  assimploader.h
source/modules/nameexample/: CMakeLists.txt  name_example_system.cpp  name_example_system.h
source/modules/ogrerender/: CMakeLists.txt  ogrerender.cpp  ogrerender.h
